# main_app/views/user_and_driver.py
@@ -7,7 +7,7 @@ from main_app.controller import validate_all, validate_params_with_schema, valid
     validate_is_authorized_with_id
 from main_app.model import Driver, User
 from main_app.schemas import UserSchema, RegisterDriverSchema, UserSchemaNoOrganizations, ChangePhoneSchema, \
-    ChangeNameSchema, ChangeLastNameSchema
+    ChangeNameSchema, ChangeLastNameSchema, ChangeEmailSchema
 from main_app.views import api
 from main_app.responses import SwaggerResponses, build_error
 
@@ -105,5 +105,18 @@ def change_last_name():
     if errors:
         return errors
     current_user.last_name = name
+    db.session.commit()
+    return get_user_info()
+
+
+@api.route('/change_email', methods=['PATCH', 'POST'])
+@login_required
+def change_email():
+    data = request.get_json()
+    email = data.get('email')
+    errors = validate_params_with_schema(ChangeEmailSchema(), data)
+    if errors:
+        return errors
+    current_user.email = email
     db.session.commit()
     return get_user_info()
